@@ -5,13 +5,16 @@ noinst_LTLIBRARIES = libsimplify.la
 INCLUDES = -I$(top_srcdir)/source/headers 
 
 
+# TopologyPreservingSimplifier.cpp
+
 libsimplify_la_SOURCES = \
 	DouglasPeuckerLineSimplifier.cpp \
 	DouglasPeuckerSimplifier.cpp \
+	LineSegmentIndex.cpp \
 	TaggedLineSegment.cpp \
 	TaggedLineString.cpp \
 	TaggedLineStringSimplifier.cpp \
-	LineSegmentIndex.cpp
+	TaggedLinesSimplifier.cpp  
 
 libsimplify_la_LIBADD = 
 
